# beautibuk-agent

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  DOCKER_BUILD_FIX.md  Dockerfile  README.md  RUN.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: build-and-push.yml  ci.yml
docs/: API_INTEGRATION.md  ARCHITECTURE.md  COMMUNICATION_FLOW.md  CROSS_CHECK_SUMMARY.md  ENV_SETUP.md  IMPLEMENTATION_GUIDE.md  MCP_CLIENT_IMPLEMENTATION.md  MCP_INTEGRATION.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SUMMARY.md  TESTING_LLM_OPTIONS.md  VECTOR_DATABASE.md  VECTOR_DB_BENEFITS.md
migrations/: 001_initial.sql
src/: main.rs
src/agent/: embeddings.rs  llm.rs  mod.rs  orchestrator.rs
src/api/: handlers.rs  mod.rs  routes.rs
src/config/: mod.rs  settings.rs
src/database/: connection.rs  mod.rs
src/mcp/: client.rs  mod.rs  models.rs
src/models/: chat.rs  conversation.rs  mod.rs
src/session/: manager.rs  mod.rs
src/vector/: mod.rs  service.rs
